--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    // "DefaultConnection": "Server=cecdb.martinyan.org,55143;Database=web;Persist Security Info=True;User ID=cecdb;Password=Temp`1234;MultipleActiveResultSets=False;Connection Timeout=30;"
-    "ApiDbConnection": "Server=DESKTOP-9GM7NOP\\SQLEXPRESS;Database=web;Integrated Security=True;"
+    "ApiDbConnection": "Server=10.10.5.13;Database=elections;Persist Security Info=True;User ID=sa;Password=C3CextDB2020;MultipleActiveResultSets=False;Connection Timeout=30;"
+    // "ApiDbConnection": "Server=cecdb.martinyan.org,55143;Database=web;Persist Security Info=True;User ID=cecdb;Password=Temp`12345;MultipleActiveResultSets=False;Connection Timeout=30;"
+    //"ApiDbConnection": "Server=DESKTOP-9GM7NOP\\SQLEXPRESS;Database=web;Integrated Security=True;"
   },
 
 
